# MATES-for-EV-simulation

./: #VehicleEV.cpp#  .gitignore  .~lock.sn2.csv#  .~lock.sn3.csv#  ARouter.h  AmuConverter.cpp  AmuConverter.h  AmuPoint.cpp  AmuPoint.h  AppCalc.cpp  AppMates.cpp  AppSim.cpp  AppSim.h  Border.h  CMakeCache.txt  CMakeLists.txt  CSNode.cpp  CSNode.h  Conf.h  DetectorIO.cpp  Drawer.cpp  Drawer.h  FileManager.cpp  FileManager.h  GLColor.cpp  GLColor.h  GVInitializer.cpp  GVManager.cpp  GVManager.h  GenerateVehicleController.cpp  GenerateVehicleController.h  GenerateVehicleIO.cpp  GenerateVehicleIO.h  GenerateVehicleRunningMode.cpp  GenerateVehicleRunningMode.h  GeneratingTable.cpp  GeneratingTable.h  Intersection.cpp  Intersection.h  IntersectionBuilder.cpp  (+77 more)
.github/workflows/: main.yml
okayama/: _detector.txt  _vehicleRoutingProbability.txt  csPosition.txt  defaultGenerateTable.txt  generateTable.txt  mapEditor.mie  mapEditorError.txt  mapPosition.txt  network.txt  nohup.out
okayama/intersection/: 000008.txt  000048.txt  000054.txt  000066.txt  000075.txt  000108.txt  000124.txt  000141.txt  000151.txt  000188.txt  000190.txt  000242.txt  000250.txt  000330.txt  000338.txt  000350.txt  000367.txt  000368.txt  000392.txt  000450.txt  000600.txt  000603.txt  000631.txt  000740.txt  000756.txt  000761.txt  000999.txt  001001.txt  001008.txt  001011.txt  001012.txt  001014.txt  001017.txt  001053.txt  001303.txt  001601.txt  009161.txt  009629.txt  009699.txt  009747.txt  (+13 more)
okayama/result/: linkShape.txt  nodeShape.txt  runInfo.txt  signalCount.txt  vehicleAttribute.txt  vehicleCount.txt
okayama/signals/: 000055.msf  000093.msa  000096.msa  000109.msf  000124.msa  000124.msf  000142.msa  000146.msa  000187.msf  000204.msf  000250.msf  000324.msf  000335.msa  000338.msa  000339.msa  000393.msf  000395.msf  000500.msf  000702.msa  001003.msa  001004.msa  001100.msf  008713.msa  008716.msa  008827.msa  008833.msf  009513.msa  009524.msa  009618.msa  009747_旧.msf  009814.msa  009883.msf  010209.msa  010298.msf  010794.msa  010859.msf  010884.msf  010899.msa  011337.msf  011349.msa  (+15 more)
okayama90/: _mapEditorError.txt  _mapPosition.txt  _vehicleFamily.txt  csList.txt  csPosition.txt  detector.txt.org  generateTable.txt  mapPosition.txt  network.txt  nohup.out  pFlag.txt  signalList.txt  speedLimit.txt  vehicleRoutingProbability.txt
okayama90/intersection/: 000009.txt  000026.txt  000062.txt  000063.txt  000095.txt  000096.txt  000111.txt  000117.txt  000125.txt  000156.txt  000171.txt  000241.txt  000276.txt  000335.txt  000343.txt  000358.txt  000500.txt  000501.txt  000700.txt  000760.txt  000850.txt  000851.txt  001003.txt  001004.txt  001100.txt  001200.txt  008833.txt  009750.txt  009875.txt  009884.txt  010088.txt  010883.txt  010884.txt  010890.txt  010894.txt  011387.txt  011399.txt  020003.txt  020034.txt  020101.txt  (+7 more)
okayama90/result/: chargeLog001.csv  linkShape.txt  nodeShape.txt  runInfo.txt  signalCount.txt  vehicleCount.txt
okayama90/result/inst/: detD000003.txt  detD000005.txt  detD000006.txt  detD000007.txt  detD000008.txt  detD000010.txt  detD000012.txt  detD000014.txt  detD000016.txt  detD000019.txt  detD000022.txt  detD000027.txt  detD000030.txt  detD000032.txt  detD000033.txt  detD000035.txt  detD000036.txt  detD000037.txt  detD000039.txt  detD000043.txt  detD000044.txt  detD000045.txt  detD000047.txt  detD000049.txt  detD000058.txt  detD000059.txt  detD000061.txt  detD000064.txt  detD000069.txt  detD000070.txt  detD000071.txt  (+69 more)
okayama90/signals/: 000066.msa  000108.msf  000142.msf  000188.msf  000197.msa  000225.msa  000250.msa  000291.msa  000291.msf  000310.msa  000316.msf  000335.msf  000367.msf  000392.msf  000394.msf  000999.msf  001100.msa  001602.msa  008709.msf  008827.msf  008833.msa  009161.msa  009177.msa  009178.msf  009363.msa  009363.msf  009485.msa  009699.msa  009699.msf  009818.msf  009818_旧.msa  009840.msa  009843.msf  009846.msa  009983.msf  010088.msa  010286.msa  010298.msa  010886.msf  010890.msa  (+21 more)
okayamaTEST/: _generateTable.txt  csList.txt  csPosition.txt  detector.txt  init.txt  mapPosition.txt  memo.txt  network.txt  oneWayCS.txt  pFlag.txt  signalList.txt  vehicleRoutingParam.txt  vehicleRoutingProbability.txt
okayamaTEST/intersection/: 000045.txt  000076.txt  000099.txt  000106.txt  000109.txt  000113.txt  000129.txt  000130.txt  000142.txt  000144.txt  000146.txt  000153.txt  000174.txt  000184.txt  000225.txt  000259.txt  000278.txt  000342.txt  000630.txt  000633.txt  000648.txt  000702.txt  000744.txt  000800.txt  001007.txt  001010.txt  001054.txt  001080.txt  001201.txt  001205.txt  001600.txt  001602.txt  009164.txt  009170.txt  009485.txt  009818.txt  009843.txt  009883.txt  009886.txt  010240.txt  (+10 more)
okayamaTEST/result/: chargeLog001.csv  linkShape.txt  nodeShape.txt  runInfo.txt  signalCount.txt  vehicleAttribute.txt
okayamaTEST/signals/: 000026.msf  000096.msf  000099.msf  000109.msa  000115.msf  000125.msa  000125.msf  000130.msa  000130.msf  000146.msf  000151.msf  000153.msf  000187.msa  000188.msa  000225.msf  000227.msf  000324.msa  000338.msf  000358.msf  000364.msa  000500.msa  000603.msa  000630.msf  000756.msa  000999.msa  001001.msa  001003.msf  001004.msf  008709.msa  008713.msf  008716.msf  009161.msf  009170.msf  009178.msa  009365.msf  009485.msf  009747.msa  009814.msf  009821.msa  009821.msf  (+29 more)
test/: _mapPosition.txt  _network.txt  csList.txt  csPosition.txt  mapEditor.mie  mapEditorError.txt  mapPosition.txt  network.txt  vehicleRoutingProbability.txt
test1/: mapEditor.mie  mapPosition.txt  network.txt
test1/signals/: 000026.msa  000048.msf  000052.msf  000088.msf  000093.msf  000099.msa  000108.msa  000115.msa  000204.msa  000227.msa  000310.msf  000322.msf  000330.msa  000368.msf  000369.msa  000392.msa  000393.msa  000603.msf  000702.msf  000756.msf  001001.msf  008727.msa  008727.msf  009170.msa  009177.msf  009365.msa  009618.msf  009747.msf  009747_旧.msa  009800.msa  009800.msf  009818.msa  009818_旧.msf  009821_旧.msf  009840.msf  009840_旧.msa  009846.msf  009859.msf  009867.msf  009983.msa  (+29 more)
(+108 files in other folders)
